--- a/render.yaml
+++ b/render.yaml
@@ -2,11 +2,10 @@ services:
   - type: web
     name: fraud-detection-app
     env: python
+    runtime: python
     buildCommand: pip install -r requirements.txt
     startCommand: gunicorn --bind 0.0.0.0:$PORT app:app
     envVars:
-      - key: PYTHON_VERSION
-        value: 3.11.0
       - key: SECRET_KEY
         generateValue: true
       - key: RENDER
